# float

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  dprint.json  nx.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: check.yml
apps/engine/src/: app.cpp
apps/faker/: package.json  tailwind.config.ts
apps/faker/src/routes/: +page.svelte
apps/graph/: index.html  package.json  vite.config.ts
apps/graph/src/: app.css  app.d.ts  app.html  main.ts
apps/graph/src/lib/: Chart.svelte
apps/graph/src/routes/: +page.svelte
apps/receiver/: package.json  tsconfig.json
apps/receiver/src/: index.ts
apps/reciever/: package.json  tsconfig.json
apps/reciever/src/: constants.ts  index.ts  mock.ts
apps/sender/: package.json
apps/sender/src/: index.ts  mock.ts  trpc.ts
crates/receiver/: Cargo.toml
crates/sender/: Cargo.toml
crates/xbee-uart/: Cargo.toml
sender/: Cargo.toml  build.rs
sender-c/src/: main.cpp
sender/.cargo/: config.toml
sender/src/: main.rs
