[package]
name = "sender"
version = "0.1.0"
edition = "2021"

[dependencies]
rp-pico = "0.8"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-time = "0.12"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-hal = { version = "0.10", features = ["rt"] }
rp2040-boot2 = "0.3"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "1.0"
panic-halt = "0.2"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[target.'cfg(all(target_arch = "arm", target_os = "none"))']
runner = "elf2uf2 -d"

rustflags = [
 "-C", "linker=flip-link",
 "-C", "link-arg=--nmagic",
 "-C", "link-arg=-Tlink.x",
 "-C", "link-arg=-Tdefmt.x",
 "-C", "inline-threshold=5",
 "-C", "no-vectorize-loops",
]

[build]
target = "thumbv6m-none-eabi"

[env]
DEFMT_LOG = "debug"
